--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-*{
+* {
     margin: 0;
 }
+
 .color {
     display: inline-grid;
     grid-template-columns: auto auto auto auto;
@@ -10,15 +11,19 @@
     width: 10px;
     margin: 2px;
 }
- .azul {
-    background-color: #bde0fe;
+
+.preto {
+    background-color: black;
 }
+
 .rosa {
     background-color: #ffafcc;
 }
+
 .roxo {
     background-color: #e7c6ff;
 }
-.verde {
-    background-color: #d0f4de;
+
+.azul {
+    background-color: #bde0fe;
 }
