--- a/style.css
+++ b/style.css
@@ -28,12 +28,13 @@
     background-color: #bde0fe;
 }
 #pixel-board {
-    width: 30%;
+    width: 16%;
+
 }
 .pixel {
     display:inline-grid;
-    grid-template-columns: auto;
-    padding: 35px;
     border: 1px solid black;
     background-color: white;
+    width: 40px;
+    height: 40px;
 }
