--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
   padding: 0;
 }
 
+body {
+  background-image: url('http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/a0d92e1f337c491.png')
+}
+
 h1 {
-  background-color: #a2d2ff;
   text-align: center;
   padding: 10px;
+  color: white;
 }
 
 #color-palette {
@@ -24,19 +28,19 @@ h1 {
   margin-bottom: 8px;
 }
 
-#preto {
+.preto {
   background-color: black;
 }
 
-#rosa {
+.rosa {
   background-color: #ffafcc;
 }
 
-#roxo {
+.roxo {
   background-color: #e7c6ff;
 }
 
-#azul {
+.azul {
   background-color: #bde0fe;
 }
 
@@ -54,6 +58,22 @@ h1 {
   height: 40px;
 }
 
-#botao {
-text-align: center;
+#clear-board {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.button {
+  border: 3px solid #e7c6ff;
+  padding: 5px 10px;
+  color: black;
+  background-color: white;
+  font-size: 15px;
+
+}
+
+.button:hover {
+  background-color: #e7c6ff;
+  color: white;
 }
