ageitando o nono requisito

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url('http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/a0d92e1f337c491.png')
+  background-image: url('http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/a0d92e1f337c491.png');
 }
 
 h1 {
